--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+</head>
+<body>
+    <h1>Welcome to this amazing rover</h1>
+    <div style="width:max-content; height:max-content; background-color: aliceblue; align-items: center;">
+<button id="first-button" type="button" >forward</button>
+<button id="second-button" type="button" >backward</button>
+<button id="third-button" type="button" >left</button>
+<button id="fourth-button" type="button" >right</button>
+<button id="fifth-button" type="button" >high</button>
+<button id="sixth-button" type="button" >low</button>
+<button id="seventh-button" type="button" >medium</button>
+<button id="stop" type="button">stop</button>
+    </div>
     <script>
-window.onload=function(){
+        function sendCommand(command){
+            fetch('/motor', {method:'POST', headers: {
+                'Content-Type':'application/json'},
+                body:JSON.stringify({command:command})
+
+            }).then(response=>response.json())
+            .then(data=>alert(data.status))
+            .catch(error =>console.error('Error:',error));
+
+        }
+
 document.getElementById("first-button").addEventListener('click',function (){
 alert("The motors will now move in forward direction")
 })
@@ -35,21 +57,12 @@ document.getElementById("sixth-button").addEventListener('click', function (){
 
 document.getElementById("seventh-button").addEventListener('click', function (){
     alert("Motors will be moderate now")
-})}
+})
 
+document.getElementById("stop").addEventListener('click', function (){
+    alert("the motors will cease  to rotate...exiting")
+})
 
-    </script>
-</head>
-<body>
-    <h1>Welcome to this amazing rover</h1>
-    <div style="width:max-content; height:max-content; background-color: aliceblue; align-items: center;">
-<button id="first-button" type="button" >forward</button>
-<button id="second-button" type="button" >backward</button>
-<button id="third-button" type="button" >left</button>
-<button id="fourth-button" type="button" >right</button>
-<button id="fifth-button" type="button" >high</button>
-<button id="sixth-button" type="button" >low</button>
-<button id="seventh-button" type="button" >medium</button>
-    </div>
+</script>
 </body>
 </html>
